feat: ImplementaçÃãçãoPI de processamento d asencrono listde a de simulações com threads virtuais
